# soft-opengl

./: CMakeLists.txt  README.md
samples/: CMakeLists.txt  Cat.cpp  Cat.h  Lamborghini.cpp  Lamborghini.h  color.h  glut.cpp  glut.h  light.h  material.h  mesh.cpp  mesh.h  scene.cpp  scene.h  texture.cpp  texture.h  vector.cpp  vector.h  winmain.cpp  x2demo.cpp
src/: CMakeLists.txt  SGL.h  dllmain.cpp  gl.h  gl_buffer.cpp  gl_buffer.h  gl_frontend.cpp  gl_frontend.h  gl_memory.cpp  gl_memory.h  gl_objects.cpp  gl_objects.h  gl_pipeline.cpp  gl_pipeline.h  gl_pipeline_fs.cpp  gl_pipeline_ia.cpp  gl_pipeline_om.cpp  gl_pipeline_pa.cpp  gl_pipeline_rs.cpp  gl_pipeline_vs.cpp  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_utilities.h  gl_vertex_attribute.cpp
